<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="hello">Welcome to Scavenger Hunt Game</string>
    
    <string name="app_version">1.0</string>
    <string name="app_name">ScavengerHunt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="parse_app_id">9HOIIAdL95yhZfmpLhfjjzl5wbHH7k8huSCTYMj9</string>
    <string name="parse_client_id">ekxLsDEraJ6hvqsWJJxHvL23AAc6zCM6vQBMpizo</string>

    <!-- Generic --> 
    <string name="label_cancel">Cancel</string>
    <string name="label_continue">Continue</string>
    
    
     <!-- Menu Options -->
    <string name="option_menu_about">About</string>
    <string name="option_menu_prefs">Preferences</string>
    <string name="option_menu_refresh">Refresh</string>
    <string name="option_menu_logout">Log out</string>
    
     <!-- Login Screen --> 
    <string name="label_enterUsernamePasswordEmail">Enter your username, password and email</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your EMAIL</string>
    
    <string name="label_login_in_progress">Login in progress...</string>
    <string name="label_signup_in_progress">Sign up in progress for new user</string>
    <string name="label_login_please_wait">Please wait...</string>
    <string name="label_query_in_progress">Searching for user</string>
    <string name="label_queryErrorMessage">User query error.</string>
    <string name="label_signupErrorMessage">User signup error.</string>
    <string name="label_loginErrorMessage">Login error:  </string>
    <string name="label_loginPleaseTryAgainMessage">Please try again</string>
    <string name="label_loginUsernameAlreadyExists">Already a user with that username.  Please choose a new username</string>
    <string name="label_loginEmailAlreadyExists">Already a user with that email address.  Please choose a new email</string>
    
    <string name="label_selectOption">What would you like to do?</string>
    <string name="label_newgame">Start a new Game</string>
    <string name="label_mygames">View My Games</string>
    <string name="label_gamesiamplaying">View Games I am Playing</string>
    <string name="label_joingame">Join a Game</string>
    <string name="label_creategames">Create a New Game</string>
     <string name="label_playgames">Play a Game</string>
    <string name="label_newgame_options">Which game would you like to play?</string>
    <string name="label_indoor_newgame"> Indoor Game</string>
    <string name="label_outdoor_game">Outdoor Game</string>
    <string name="label_around_town">Around Town Game</string>
    <string name="namelabel">"Item: "</string>
     <string name="playerlabel">"Player: "</string>
    <string name="buttonCheck">Found It</string>
    <string name="label_game_title">Please enter the Game Title</string>
    <string name="label_save_item">Save Item</string>
    <string name="label_done">Finished</string>
     <string name="another">Would you like to enter another item? (Y or N)</string>
    <string name="label_start_date">Please Enter Start Date</string>
    <string name="label_end_date">Please Enter End Date</string>
    <string name="selectdate"> Please select date</string>
    <string name="label_input_each_item">Please input your item below:</string>
    <string name="selected">Selected</string>
    <string name="get_answer">Click to get Selected Answer</string>
     <string name="label_another">Enter Y or N </string>
     <string name="display_label">Display</string>
     <string name="label_save_game">Save New Game</string>
     <string name="update">Update</string>
     <string name="delete">Delete</string>
     <string name="update_item">Update Current Item</string>
     <string name="label_playerlist">List of Players</string>
      <string name="usernamelabel">User: </string>
       <string name="emaillabel">Email: </string>
       <string name="label_playgame">Choose a Game </string>
       <string name="titlelabel">Title: </string>
       <string name="gameidlabel">Game Id: </string>
       <string name="gamelabel">Name of Game: </string>
       <string name="label_input_game_name">Select a game from the drop down menu for the notification and submit:</string>
       <string name="label_existing_game">Edit Title or Start/ End Dates of a Game</string>
       <string name="label_edit_game_title">Enter New Game Title </string>
       <string name="label_save_updated_game">Save Changes</string>
       
</resources>
