<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_input_each_item"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />
    

    <EditText
        android:id="@+id/item1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
    
    <Button
           android:id="@+id/button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="saveToParse"
           android:text="@string/label_save_item" />

    <Button
        android:id="@+id/finbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveToParse"
        android:text="@string/label_done" />

    </LinearLayout>

    </LinearLayout>
    