<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_margin="10dp"
    android:orientation="vertical" >
    
    
    
        
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/update_item"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

     <TextView
         android:id="@+id/currentItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
     
     <EditText
        android:id="@+id/updateItem"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible"
        />
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
    
    <Button
           android:id="@+id/updateButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="saveToParse"
           android:text="@string/update" />
    
     <Button
           android:id="@+id/deleteButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="saveToParse"
           android:text="@string/delete" />
     
      
     
     </LinearLayout>
  
    

</LinearLayout>
